--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/broccoli-salad.html">Broccoli Salad</a></li>
+        <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+    </ul>
 </body>
-
-</html>
