Add css styling

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="all-recipes">
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/broccoli-salad.html">Broccoli Salad</a></li>
         <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
