--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiramisu Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <h1>Tiramisu</h1>
+    <h1 class="recipe">Tiramisu</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9163611.jpg"
         alt="tiramisu" height="400px">
 
@@ -67,6 +73,7 @@
         </li>
     </ol>
 
+    <a href="../index.html">All recipes</a>
 
 </body>
 
