--- a/recipes/broccoli-salad.html
+++ b/recipes/broccoli-salad.html
@@ -6,10 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Broccoli Salad Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <h1>Broccoli Salad</h1>
+    <h1 class="recipe">Broccoli Salad</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2F3cbdef3cfaf1131aa754a1cfb8341c28%2F165776626920220710_203744.jpg"
         alt="broccoli salad" height="400px">
 
@@ -49,6 +55,8 @@
             Let chill before serving, if desired.
         </li>
     </ol>
+
+    <a href="../index.html">All recipes</a>
 
 
 </body>
